# eth-benchtools

./: .gitignore  README.md  generate_figures.py  go.mod  locustfile.py  main.go  plot.ipynb  pyproject.toml  statistics.ipynb
2024-09-16/plots/: report.md
contracts/src/: Token.sol
contracts/test/: Token.t.sol
lib/: deployer.py  transfers.py
