[tool.poetry]
name = "web3-locust"
version = "0.1.0"
description = ""
authors = ["Jinsuk Park <totorovirus@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
locust = "^2.31.5"
web3 = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
